k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-device
  labels:
    app: smart-device
    service: smart-device
spec:
  ports:
  - port: 9080
    targetPort: 8000
    name: http
  selector:
    app: smart-device
