k8s/destinationRule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: smart-device
spec:
  host: smart-device
  subsets:
  - name: v1
    labels:
      version: v1
